# hstu

./: .env  .gitignore  .gitmodules  README.md  pyproject.toml
configs/: books.yaml  video_games.yaml
docs/: architecture.md
docs/superpowers/plans/: 2026-04-05-hstu-recommender.md
docs/superpowers/specs/: 2026-04-05-hstu-recommender-design.md  2026-04-16-model-parallel-embedding-design.md
src/hstu_rec/: benchmark.py  dataset.py  evaluate.py  metrics.py  train.py
src/hstu_rec/preprocess/: __init__.py  download.py  filter.py  tfrecords.py
tests/: conftest.py  test_dataset.py  test_evaluate.py  test_metrics.py  test_train.py
tests/preprocess/: conftest.py  test_download.py  test_filter.py  test_tfrecords.py
